--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task Master</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="Media/icon.png" type="image/x-icon"/>
+    <link rel="icon" href="icon.png" type="image/x-icon"/>
 </head>
 
 <body>
